Use Stream's toList().