@@ -18,8 +18,6 @@
  */
 package oripa.domain.fold.origeom;
 
-import java.util.stream.Collectors;
-
 import oripa.util.AtomicByteDenseMatrix;
 import oripa.util.ByteDenseMatrix;
 import oripa.util.ByteMatrix;
@@ -289,7 +287,7 @@ public class OverlapRelation {
 			var line = String.join(" ",
 					overlapRelation.getRow(i).stream()
 							.map(b -> b.toString())
-							.collect(Collectors.toList()));
+							.toList());
 			builder.append(line);
 			builder.append(System.lineSeparator());
 		}
