@@ -19,7 +19,6 @@
 package oripa.domain.paint.line;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import oripa.domain.cptool.PseudoLineFactory;
 import oripa.domain.paint.PaintContext;
@@ -47,7 +46,7 @@ public class LineSnapPointFactory {
 		snapPoints.add(p0);
 		snapPoints.add(p1);
 
-		return snapPoints.stream().distinct().collect(Collectors.toList());
+		return snapPoints.stream().distinct().toList();
 	}
 
 }
